--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,13 +34,16 @@ services:
       timeout: 5s
       retries: 5
 
-  # Backend API
+  # Backend API (svc-backend-notes)
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: cantomeet-backend
     restart: unless-stopped
+    ports:
+      - "8200:8000"  # Expose backend to public (for testing without global nginx)
+      # Use "127.0.0.1:8200:8000" for local access only
     environment:
       # Database
       DATABASE_URL: postgresql://${POSTGRES_USER:-cantomeet}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB:-cantomeet_notes}
@@ -115,7 +118,7 @@ services:
     networks:
       - cantomeet-network
 
-  # Frontend (React + Vite)
+  # Frontend (svc-web-notes)
   frontend:
     build:
       context: ./frontend
@@ -125,6 +128,9 @@ services:
         VITE_API_BASE_URL: /api
     container_name: cantomeet-frontend
     restart: unless-stopped
+    ports:
+      - "3004:80"  # Expose frontend to public (for testing without global nginx)
+      # Use "127.0.0.1:3004:80" for local access only
     networks:
       - cantomeet-network
     healthcheck:
@@ -133,28 +139,10 @@ services:
       timeout: 10s
       retries: 3
 
-  # Nginx (Reverse proxy + HTTPS)
-  nginx:
-    image: nginx:alpine
-    container_name: cantomeet-nginx
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
-      - ./nginx/logs:/var/log/nginx
-    depends_on:
-      - backend
-      - frontend
-    networks:
-      - cantomeet-network
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+  # Note: Nginx service removed - using global nginx (aura-companion-nginx)
+  # The global nginx will proxy to:
+  # - Frontend: 127.0.0.1:3004
+  # - Backend: 127.0.0.1:8200
 
 volumes:
   postgres_data:
