--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "pydantic-settings>=2.0.0,<3.0.0",
     "sqlalchemy>=2.0.0,<3.0.0",
     "alembic>=1.13.0,<2.0.0",
-    "psycopg[binary]>=3.1.0,<4.0.0",
+    "psycopg2-binary>=2.9.0,<3.0.0",
     "python-multipart>=0.0.9",
     "httpx>=0.25.0,<1.0.0",
     "rq>=1.15.0,<2.0.0",
