--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,12 @@ services:
         condition: service_healthy
     networks:
       - cantomeet-network
+    healthcheck:
+      test: ["CMD-SHELL", "ps aux | grep -v grep | grep -q 'rq worker' || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   # Frontend (svc-web-notes)
   frontend:
@@ -135,10 +141,11 @@ services:
     networks:
       - cantomeet-network
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
 
   # Note: Nginx service removed - using global nginx (aura-companion-nginx)
   # The global nginx will proxy to:
